Fix spacing problem for mobile

--- a/src/pages/Registration/Form/screens/styles.module.scss
+++ b/src/pages/Registration/Form/screens/styles.module.scss
@@ -180,7 +180,7 @@
     color: aqua;
   }
 
-  span {
+  p {
     color: white;
     font-size: large;
   }
